    remotes, which was never tested and didn't quite work before.
  * list: Do not include dead repositories.
  * move --to: Better behavior when system is completely out of disk space;
    drop content from disk before writing location log.
  * v6: Fix bad automatic merge conflict resolution between an annexed file
    and a directory with the same name when in an adjusted branch.
  * Avoid a crash if getpwuid does not work, when querying the user's full
    name.
  * v6: Fix bug in initialization of clone from a repo with an adjusted branch
    that had not been synced back to master. 
    (This bug caused broken tree objects to get built by a later git annex
    sync.)
  * v6: Make lock and unlock work on files whose content is not present.
  * v6: Fix update of associated files db when unlocking a file.
  * v6: Make git clean filter preserve the backend that was used for a file.

 -- Joey Hess <id@joeyh.name>  Fri, 27 May 2016 13:12:48 -0400

git-annex (6.20160527) unstable; urgency=medium

  * Split lines in the git-annex branch on \r as well as \n, to deal
    with \r\n terminated lines written by some versions of git-annex on
    Windows. This fixes strange displays in some cases.
  * assistant: Fix bug that caused v6 pointer files to be annexed by the
    assistant.
  * assistant: Fix race in v6 mode that caused downloaded file content to
    sometimes not replace pointer files.
  * add: Adding a v6 pointer file used to annex it; now the pointer file is
    added to git as-is. (git add of a pointer file already did the right
    thing)
  * enableremote: Can now be used to explicitly enable git-annex to use
    git remotes. Using the command this way prevents other git-annex
    commands from probing new git remotes to auto-enable them.
  * enableremote: Remove annex-ignore configuration from a remote.
  * Change git annex info remote encryption description to use wording
    closer to what's used in initremote.